@@ -1,25 +1,24 @@
 package com.technokratos.counter;
 
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+
 public class CounterTask {
 
     public static void main(String[] args) {
         Counter counter = new Counter();
+
         Runnable task = () -> {
             for (int i = 0; i < 1000; i++) {
                 counter.increment();
             }
         };
-        Thread[] threads = {new Thread(task), new Thread(task)};
-        for (Thread t : threads) {
-            t.start();
+
+        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            executor.submit(task);
+            executor.submit(task);
         }
-        for (Thread t : threads) {
-            try {
-                t.join();
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-            }
-        }
+
         System.out.println("Final counter value: %s".formatted(counter.getCounter()));
     }
 }
